[package]
name = "numan"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs-next = "2.0"
clap = { version = "4.5.43", features = ["derive", "env"] }
serde_json = "1.0.142"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["io"] }
reqwest = { version = "0.12.22", features = ["multipart", "stream"] }
